# snippy

./: .gitignore  README.md
dashboard/: README.md  dump.rdb  pyproject.toml  setup.sh
dashboard/app/: docker_logic.py  k8s_logic.py  main.py  utils.py
dashboard/app/common/: Dockerfile
dashboard/app/common/container/: main.py
dashboard/app/container/: main.py
dashboard/app/utils/: __init__.py  command.py  constants.py  llm_queries.py
dashboard/common/container/: main.py
dashboard/common/projects/python_helloworld/: todo.txt
dashboard/common/server/: constants.py  models.py  requirements.txt
dashboard/container/: constants.py
extension/: README.md
scripty/: README.md  package.json  scripty-0.0.1.vsix
scripty/src/: extension.ts  prompts.ts  utils.ts
scripty_backend/: Pipfile  main.py
teacher-frontend/: package-lock.json  package.json
teacher-frontend/app/: root.tsx  tailwind.css
teacher-frontend/app/components/: Charts.tsx  Layout.tsx
teacher-frontend/app/components/ui/: chart.tsx  hero-parallax.tsx
teacher-frontend/app/routes/: _index.tsx  dashboard.tsx
tmp/: Dockerfile  create_container.sh
utils/: .env
